<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/shareFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/crudFragment"
            android:icon="@drawable/dinosaurio"
            android:title="@string/menu_list" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_basket"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
