<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/color_bar_main">

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textSize="12sp"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:textSize="12sp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_text"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/color_bar_main" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/btn_register"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/color_bar_main" />

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:text="@string/btn_recover"
        android:backgroundTint="@color/white"
        android:textColor="@color/color_bar_main" />

</LinearLayout>
